libs/preprocessor/tests/errors/pe10_function_as_value/source.hpp
#define HELLO(var) Hello var

greeting = HELLO;
